# openpgp-card-init

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yaml
src/: main.rs
